--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,14 @@ $base-font-heading-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
+$base-font-h1-size: 3em;
+$base-font-h2-size: 2.25em;
+$base-font-h3-size: 3em;
+$base-font-h4-size: 3em;
+$base-font-h5-size: 3em;
+$base-font-h6-size: 3em;
+$base-heading-line-height: 1.3;
+
 $spacing-unit:     30px;
 
 $text-color:       #333;
