--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -26,6 +26,16 @@ dl, dd, ol, ul, figure {
 
 
 
+/* apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+
 /**
  * Basic styling
  */
