--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,7 +40,7 @@
     }
 
     &__site-name {
-      font-size: 1.5em;
+      font-size: 1.125em;
       color: $brand-color;
       margin-bottom: 0;
       display: inline-block;
@@ -62,7 +62,7 @@
     @include bp(sm) {
       float: left;
       width: 50%;
-      padding-top: 0.5em;
+      padding-top: 0.10em;
     }
 
     &__list {
@@ -133,10 +133,72 @@
     font-size: 1.125rem;
   }
 
+  &__title {
+    margin-bottom: 0.9375em;
+  }
+
   &__wrapper {
 
     &__card {
+      background-color: $white;
+      color: $text-color;
+      display: block;
+      padding: 0 0.9375em 2.5em 0.9375em;
+      border-radius: 5px;
+      overflow: hidden;
+      transition: box-shadow ease-out 100ms;
+      margin-bottom: 1.25em;
 
+      &:hover {
+        color: $text-color;
+        text-decoration: none;
+      }
+
+      @include bp(sm) {
+        width: 48%;
+        margin-right: 1%;
+        margin-left: 1%;
+        float: left;
+
+        &:hover {
+          -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
+          -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
+          box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
+        }
+      }
+
+      @include bp(md) {
+        width: 31%;
+      }
+
+      @include bp(lg) {
+        width: 23%;
+      }
+
+      img {
+        display: inline-block;
+        margin-bottom: 1.25em;
+      }
+
+      &__title {
+        font-size: 1.5em;
+        line-height: 1.3;
+      }
+
+      p {
+        font-size: 1em;
+      }
+
+      &__link {
+        font-size: 1.125em;
+        font-weight: 700;
+        color: $brand-color;
+
+        &:hover {
+          color: $brand-color;
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
