--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,6 +83,10 @@
           margin-right: 0;
           margin-left: 3em;
         }
+
+        &:last-of-type {
+          margin-right: 0;
+        }
       }
     }
   }
@@ -138,6 +142,19 @@
   }
 
   &__wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    @include bp(sm) {
+      margin: 0 -10px;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    @include bp(md) {
+      margin: 0 -15px;
+    }
 
     &__card {
       background-color: $white;
@@ -147,18 +164,25 @@
       border-radius: 5px;
       overflow: hidden;
       transition: box-shadow ease-out 100ms;
-      margin-bottom: 1.25em;
+      margin-bottom: 10px;
+      max-width: 100%;
 
       &:hover {
         color: $text-color;
         text-decoration: none;
       }
 
+      &:visited {
+        color: inherit;
+      }
+
       @include bp(sm) {
-        width: 48%;
-        margin-right: 1%;
-        margin-left: 1%;
+        width: 47%;
+        margin-bottom: 20px;
+        margin-right: 10px;
+        margin-left: 10px;
         float: left;
+        max-width: 48%;
 
         &:hover {
           -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
@@ -168,11 +192,14 @@
       }
 
       @include bp(md) {
-        width: 31%;
+        width: 29.9%;
+        margin-right: 15px;
+        margin-left: 15px;
+        margin-bottom: 30px;
       }
 
       @include bp(lg) {
-        width: 23%;
+        width: 30%;
       }
 
       img {
