--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -87,6 +87,10 @@
         &:last-of-type {
           margin-right: 0;
         }
+
+        &:visited {
+          color: $col-pri;
+        }
       }
     }
   }
@@ -147,13 +151,8 @@
     flex-wrap: wrap;
 
     @include bp(sm) {
-      margin: 0 -10px;
       flex-direction: row;
       justify-content: space-between;
-    }
-
-    @include bp(md) {
-      margin: 0 -15px;
     }
 
     &__card {
@@ -163,7 +162,9 @@
       padding: 0 0.9375em 2.5em 0.9375em;
       border-radius: 5px;
       overflow: hidden;
-      transition: box-shadow ease-out 100ms;
+      -moz-transition: box-shadow 300ms;
+      -webkit-transition: box-shadow 300ms;
+      transition: box-shadow 300ms;
       margin-bottom: 10px;
       max-width: 100%;
 
@@ -177,12 +178,9 @@
       }
 
       @include bp(sm) {
-        width: 47%;
-        margin-bottom: 20px;
-        margin-right: 10px;
-        margin-left: 10px;
+        width: 49%;
+        margin-bottom: 15px;
         float: left;
-        max-width: 48%;
 
         &:hover {
           -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.25);
@@ -192,14 +190,7 @@
       }
 
       @include bp(md) {
-        width: 29.9%;
-        margin-right: 15px;
-        margin-left: 15px;
-        margin-bottom: 30px;
-      }
-
-      @include bp(lg) {
-        width: 30%;
+        width: 32.5%;
       }
 
       img {
