--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -153,6 +153,7 @@
     @include bp(sm) {
       flex-direction: row;
       justify-content: space-between;
+      -webkit-justify-content: space-between;
     }
 
     &__card {
