--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -146,10 +146,10 @@
   }
 
   &__wrapper {
-    display: -webkit-box;
     display: -webkit-flex;
     display: flex;
     flex-direction: column;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
 
     @include bp(sm) {
