--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
 
     <nav class="header__navigation">
       <ul class="header__navigation__list">
-        <li class="header__navigation__list__link"><a href="#0">About</a></li>
-        <li class="header__navigation__list__link"><a href="#0">Portfolio</a></li>
-        <li class="header__navigation__list__link"><a href="#0">Contact</a></li>
+        <li class="header__navigation__list__link"><a href="#about">About</a></li>
+        <li class="header__navigation__list__link"><a href="#portfolio">Portfolio</a></li>
+        <li class="header__navigation__list__link"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
