--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,8 @@
 <a name="contact"></a>
 <section class="contact">
   <div class="container">
-    <h1>Get in touch</h1>
-    <p>Send me an email</p>
+    <h1 class="contact__title">Get in touch</h1>
+    <p class="contact__text">Send me an email</p>
     <a href="mailto:danielle.lamb@icloud.com" class="button button-white">danielle.lamb@icloud.com</a>
   </div>
 </section>
