--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+{% include contact.html %}
+{% include copyright.html %}
+
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.12.4.min.js"><\/script>')</script>
 <!-- <script src="js/main.js"></script> -->
