--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -181,21 +181,22 @@ a {
 	background-color: $brand-color;
 	color: $white;
 	text-decoration: none;
-	padding: 0.625em 0.625em;
+	padding: 0.625em 0.9375em;
 	-webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
 	-moz-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
 	box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
+	position: relative;
 
 	&:hover {
 		text-decoration: none;
 	}
 
 	@include bp(sm) {
-		transition: margin-top 300ms ease;
-		transition: box-shadow 100ms linear;
+		transition: top 300ms ease;
+		transition: box-shadow 50ms linear;
 
 		&:hover {
-			margin-top: 2px;
+			top: 2px;
 			-webkit-box-shadow: none;
 			-moz-box-shadow: none;
 			box-shadow: none;
