--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
 
     <nav class="header__navigation">
       <ul class="header__navigation__list">
-        <li class="header__navigation__list__link"><a href="#about">About</a></li>
-        <li class="header__navigation__list__link"><a href="#portfolio">Portfolio</a></li>
+        <li class="header__navigation__list__link"><a href="{{ site.baseurl }}#about">About</a></li>
+        <li class="header__navigation__list__link"><a href="{{ site.baseurl }}#portfolio">Portfolio</a></li>
         <li class="header__navigation__list__link"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
