--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,5 +1,5 @@
 <section class="copyright">
   <div class="container">
-    <p class="copyright">&copy; 2016 Danielle Lamb</p>
+    <p class="copyright__text">&copy; 2016 Danielle Lamb</p>
   </div>
 </section>
