--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -296,6 +296,10 @@
 .copyright {
   color: $text-color-light;
   text-align: center;
-  padding-top: 1.25em;
-  padding-bottom: 0.625em;
+  padding-top: 2em;
+  padding-bottom: 2em;
+
+  &__text {
+    margin-bottom: 0;
+  }
 }
