--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -5,7 +5,7 @@
 
     <div class="portfolio__wrapper">
 
-      <a class="portfolio__wrapper__card" href="{{ site.baseurl }}/portfolio/test.html">
+      <a class="portfolio__wrapper__card" href="{{ site.baseurl }}/portfolio/test">
         <img src="images/portfolio-newscast.png" alt="Smiths Gore newscast">
         <h1 class="portfolio__wrapper__card__title">Smiths Gore newscast</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer feugiat, enim a maximus ornare, dui orci tempus lectus, vitae commodo dolor ante nec risus. Donec commodo ultrices elementum.</p>
