--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
 
     <nav class="header__navigation">
       <ul class="header__navigation__list">
-        <li class="header__navigation__list__link"><a href="{{ site.justinlamb1.github.io/danielle-portfolio-2 }}/#about">About</a></li>
-        <li class="header__navigation__list__link"><a href="{{ site.justinlamb1.github.io/danielle-portfolio-2 }}/#portfolio">Portfolio</a></li>
+        <li class="header__navigation__list__link"><a href="{{ site.github.url }}#about">About</a></li>
+        <li class="header__navigation__list__link"><a href="{{ site.github.url }}#portfolio">Portfolio</a></li>
         <li class="header__navigation__list__link"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
