--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="container">
 
-    <a class="header__home-link" href="{{ site.url }}">
+    <a class="header__home-link" href="{{ site.github.url }}">
       <div class="header__logo">
         <h1 class="header__logo__site-name">Danielle Lamb</h1>
         <h2 class="header__logo__job-title">Graphic Designer</h2>
