--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,6 +3,6 @@
   <div class="container">
     <h1 class="contact__title">Get in touch</h1>
     <p class="contact__text">Send me an email</p>
-    <a href="mailto:danielle.lamb@icloud.com" class="button button-white">danielle.lamb@icloud.com</a>
+    <a href="mailto:danielle.lamb@icloud.com" class="button button-white button-shadow">danielle.lamb@icloud.com</a>
   </div>
 </section>
