--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,17 +179,35 @@ a {
 	display: inline-block;
 	border-radius: 5px;
 	background-color: $brand-color;
-	color: $white;
+	color: $text-color;
 	text-decoration: none;
 	padding: 0.625em 0.9375em;
-	-webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
-	-moz-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
-	box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
 	position: relative;
+
+	@include bp(sm) {
+		transition: background-color 300ms ease;
+	}
 
 	&:hover {
 		text-decoration: none;
+		color: $text-color;
+		background-color: lighten($brand-color, 10%);
 	}
+}
+
+.button-white {
+	background-color: $white !important;
+	color: $text-color !important;
+
+	&:hover {
+		background-color: $white !important;
+	}
+}
+
+.button-shadow {
+	-webkit-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
+	box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.25);
 
 	@include bp(sm) {
 		transition: top 300ms ease;
@@ -202,11 +220,6 @@ a {
 			box-shadow: none;
 		}
 	}
-}
-
-.button-white {
-	background-color: $white !important;
-	color: $text-color !important;
 }
 
 /**
